--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 <body>
 <h1>Perms</h1>
 <ul>
-<li><a href="https://rusa.org/rusa/perm/select?pid=3505">3505: Snoqualmie Valley Trail Gravel Run</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=4464">4464: Snoqualmie Valley Mixed Surface Loop</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=3227">3227: Postdoc-Peddler 100</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=1354">1354: Centennial Trail Run</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=4037">4037: Alki-Auburn Flat Cruise</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=3065">3065: Green Gold and Red</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=4653">4653: Lake Sammamish Loop from Bryant</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=3788">3788: Preston Trail Mix</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=4334">4334: Newport-Sumner</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=3502">3502: 520 Two Lake Loop</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=4412">4412: Redmond-Golden Gardens</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=758">758: UW - Issaquah</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=3044">3044: Snohomish - Anacortes - Snohomish</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=2525">2525: The Commons-Renton-Maple Valley</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=2173">2173: Three Bumps-Woodinville</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=3499">3499: SOB - Snohomish Edison Out & Back</a>
-<li><a href="https://rusa.org/rusa/perm/select?pid=4106">4106: Tulip Tangle</a>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=3505">3505: Snoqualmie Valley Trail Gravel Run</a>, <a href="https://ridewithgps.com/routes/33914597">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=4464">4464: Snoqualmie Valley Mixed Surface Loop</a>, <a href="https://ridewithgps.com/routes/39792725">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=3227">3227: Postdoc-Peddler 100</a>, <a href="https://ridewithgps.com/routes/33466118">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=1354">1354: Centennial Trail Run</a>, <a href="https://ridewithgps.com/routes/34356072">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=4037">4037: Alki-Auburn Flat Cruise</a>, <a href="https://ridewithgps.com/routes/34997827">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=3065">3065: Green Gold and Red</a>, <a href="https://ridewithgps.com/routes/32959547">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=4653">4653: Lake Sammamish Loop from Bryant</a>, <a href="https://ridewithgps.com/routes/42083103">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=3788">3788: Preston Trail Mix</a>, <a href="https://ridewithgps.com/routes/35300556">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=4334">4334: Newport-Sumner</a>, <a href="https://ridewithgps.com/routes/38382081">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=3502">3502: 520 Two Lake Loop</a>, <a href="https://ridewithgps.com/routes/33617285">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=4412">4412: Redmond-Golden Gardens</a>, <a href="https://ridewithgps.com/routes/38912607">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=758">758: UW - Issaquah</a>, <a href="https://ridewithgps.com/routes/33321476">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=3505">3505: Snoqualmie Valley Trail Gravel Run</a>, <a href="https://ridewithgps.com/routes/33914597">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=4464">4464: Snoqualmie Valley Mixed Surface Loop</a>, <a href="https://ridewithgps.com/routes/39792725">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=3227">3227: Postdoc-Peddler 100</a>, <a href="https://ridewithgps.com/routes/33466118">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=1354">1354: Centennial Trail Run</a>, <a href="https://ridewithgps.com/routes/34356072">RWGPS</a></li>
+    <li><a href="https://rusa.org/rusa/perm/select?pid=4037">4037: Alki-Auburn Flat Cruise</a>, <a href="https://ridewithgps.com/routes/34997827">RWGPS</a></li>
 </ul>
 </body>
 </html>
