--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <html>
 <head>
+    <title>Perms</title>
 </head>
 <body>
 <h1>Perms</h1>
-<ul>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=3505">3505: Snoqualmie Valley Trail Gravel Run</a>, <a href="https://ridewithgps.com/routes/33914597">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=4464">4464: Snoqualmie Valley Mixed Surface Loop</a>, <a href="https://ridewithgps.com/routes/39792725">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=1354">1354: Centennial Trail Run</a>, <a href="https://ridewithgps.com/routes/34356072">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=4037">4037: Alki-Auburn Flat Cruise</a>, <a href="https://ridewithgps.com/routes/34997827">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=3065">3065: Green Gold and Red</a>, <a href="https://ridewithgps.com/routes/32959547">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=4653">4653: Lake Sammamish Loop from Bryant</a>, <a href="https://ridewithgps.com/routes/42083103">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=3788">3788: Preston Trail Mix</a>, <a href="https://ridewithgps.com/routes/35300556">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=4334">4334: Newport-Sumner</a>, <a href="https://ridewithgps.com/routes/38382081">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=3502">3502: 520 Two Lake Loop</a>, <a href="https://ridewithgps.com/routes/33617285">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=4412">4412: Redmond-Golden Gardens</a>, <a href="https://ridewithgps.com/routes/38912607">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=758">758: UW - Issaquah</a>, <a href="https://ridewithgps.com/routes/33321476">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=3227">3227: Postdoc-Peddler 100</a>, <a href="https://ridewithgps.com/routes/33466118">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=3044">3044: Snohomish - Anacortes - Snohomish</a>, <a href="https://ridewithgps.com/routes/33914597">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=2525">2525: The Commons-Renton-Maple Valley</a>, <a href="https://ridewithgps.com/routes/39792725">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=2173">2173: Three Bumps-Woodinville</a>, <a href="https://ridewithgps.com/routes/34356072">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=3499">3499: SOB - Snohomish Edison Out & Back</a>, <a href="https://ridewithgps.com/routes/34997827">RWGPS</a></li>
-    <li><a href="https://rusa.org/rusa/perm/select?pid=4106">4106: Tulip Tangle</a>, <a href="https://ridewithgps.com/routes/32959547">RWGPS</a></li>
-    </ul>
+<table>
+    <tr><th>ID</th><th>Name</th><th>Route</th></tr>
+    <!-- Begin Content -->
+    <tr><td>3505</td><td><a href="https://rusa.org/rusa/perm/select?pid=3505">Snoqualmie Valley Trail Gravel Run</a></td><td><a href="https://ridewithgps.com/routes/33914597">RWGPS</a></td></tr>
+    <tr><td>4464</td><td><a href="https://rusa.org/rusa/perm/select?pid=4464">Snoqualmie Valley Mixed Surface Loop</a></td><td><a href="https://ridewithgps.com/routes/39792725">RWGPS</a></td></tr>
+    <tr><td>1354</td><td><a href="https://rusa.org/rusa/perm/select?pid=1354">Centennial Trail Run</a></td><td><a href="https://ridewithgps.com/routes/34356072">RWGPS</a></td></tr>
+    <tr><td>4037</td><td><a href="https://rusa.org/rusa/perm/select?pid=4037">Alki-Auburn Flat Cruise</a></td><td><a href="https://ridewithgps.com/routes/34997827">RWGPS</a></td></tr>
+    <tr><td>3065</td><td><a href="https://rusa.org/rusa/perm/select?pid=3065">Green Gold and Red</a></td><td><a href="https://ridewithgps.com/routes/32959547">RWGPS</a></td></tr>
+    <tr><td>4653</td><td><a href="https://rusa.org/rusa/perm/select?pid=4653">Lake Sammamish Loop from Bryant</a></td><td><a href="https://ridewithgps.com/routes/42083103">RWGPS</a></td></tr>
+    <tr><td>3788</td><td><a href="https://rusa.org/rusa/perm/select?pid=3788">Preston Trail Mix</a></td><td><a href="https://ridewithgps.com/routes/35300556">RWGPS</a></td></tr>
+    <tr><td>4334</td><td><a href="https://rusa.org/rusa/perm/select?pid=4334">Newport-Sumner</a></td><td><a href="https://ridewithgps.com/routes/38382081">RWGPS</a></td></tr>
+    <tr><td>3502</td><td><a href="https://rusa.org/rusa/perm/select?pid=3502">520 Two Lake Loop</a></td><td><a href="https://ridewithgps.com/routes/33617285">RWGPS</a></td></tr>
+    <tr><td>4412</td><td><a href="https://rusa.org/rusa/perm/select?pid=4412">Redmond-Golden Gardens</a></td><td><a href="https://ridewithgps.com/routes/38912607">RWGPS</a></td></tr>
+    <tr><td>758</td><td><a href="https://rusa.org/rusa/perm/select?pid=758">UW - Issaquah</a></td><td><a href="https://ridewithgps.com/routes/33321476">RWGPS</a></td></tr>
+    <tr><td>3227</td><td><a href="https://rusa.org/rusa/perm/select?pid=3227">Postdoc-Peddler 100</a></td><td><a href="https://ridewithgps.com/routes/33466118">RWGPS</a></td></tr>
+    <tr><td>3044</td><td><a href="https://rusa.org/rusa/perm/select?pid=3044">Snohomish - Anacortes - Snohomish</a></td><td><a href="https://ridewithgps.com/routes/33914597">RWGPS</a></td></tr>
+    <tr><td>2525</td><td><a href="https://rusa.org/rusa/perm/select?pid=2525">The Commons-Renton-Maple Valley</a></td><td><a href="https://ridewithgps.com/routes/39792725">RWGPS</a></td></tr>
+    <tr><td>2173</td><td><a href="https://rusa.org/rusa/perm/select?pid=2173">Three Bumps-Woodinville</a></td><td><a href="https://ridewithgps.com/routes/34356072">RWGPS</a></td></tr>
+    <tr><td>3499</td><td><a href="https://rusa.org/rusa/perm/select?pid=3499">SOB - Snohomish Edison Out & Back</a></td><td><a href="https://ridewithgps.com/routes/34997827">RWGPS</a></td></tr>
+    <tr><td>4106</td><td><a href="https://rusa.org/rusa/perm/select?pid=4106">Tulip Tangle</a></td><td><a href="https://ridewithgps.com/routes/32959547">RWGPS</a></td></tr>
+    <!-- End Content -->
+</table>
 </body>
 </html>
