--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <tr><td>4653</td><td><a href="https://rusa.org/rusa/perm/select?pid=4653">Lake Sammamish Loop from Bryant</a> (103 - 64)</td><td><a href="https://ridewithgps.com/routes/42083103">RWGPS</a></td></tr>
     <tr><td>4412</td><td><a href="https://rusa.org/rusa/perm/select?pid=4412">Redmond-Golden Gardens</a> (102 - 63.38)</td><td><a href="https://ridewithgps.com/routes/38912607">RWGPS</a></td></tr>
     <tr><td>4878</td><td><a href="https://rusa.org/rusa/perm/select?pid=4878">Frelard to Issaquah</a> (123 - 76.43)</td><td><a href="https://ridewithgps.com/routes/44863744">RWGPS</a></td></tr>
+    <tr><td>3056</td><td><a href="https://rusa.org/rusa/perm/select?pid=3056">Olympia Chehalis Western & Yelm Tenino Trails</a> (103 - 64)</td><td><a href="https://ridewithgps.com/routes/33989721">RWGPS</a></td></tr>
     <tr><th>ID</th><th>Name</th><th>Route</th></tr>
     <tr><td>3044</td><td><a href="https://rusa.org/rusa/perm/select?pid=3044">Snohomish - Anacortes - Snohomish</a> (204 - 126.76)</td><td><a href="https://ridewithgps.com/routes/33815794">RWGPS</a></td></tr>
     <tr><td>2525</td><td><a href="https://rusa.org/rusa/perm/select?pid=2525">The Commons-Renton-Maple Valley</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/34858942">RWGPS</a></td></tr>
