Update perm route list

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <tr><td>1489</td><td><a href="https://rusa.org/rusa/perm/select?pid=1489">Snohomish - Mt. Vernon</a> (141 - 87.61)</td><td><a href="https://ridewithgps.com/routes/35004976">RWGPS</a></td></tr>
     <tr><td>3738</td><td><a href="https://rusa.org/rusa/perm/select?pid=3738">SOL - Snohomish - La Conner Out n Back</a> (158 - 98.18)</td><td><a href="https://ridewithgps.com/routes/35004946">RWGPS</a></td></tr>
     <tr><td>4106</td><td><a href="https://rusa.org/rusa/perm/select?pid=4106">Tulip Tangle</a> (201 - 124.9)</td><td><a href="https://ridewithgps.com/routes/35624420">RWGPS</a></td></tr>
+    <tr><td>5281</td><td><a href="https://rusa.org/rusa/perm/select?pid=5281">Happy Trails 200k</a> (203 - 126.14)</td><td><a href="https://ridewithgps.com/routes/48789666">RWGPS</a></td></tr>
     <tr><td>3592</td><td><a href="https://rusa.org/rusa/perm/select?pid=3592">Southern Cruise</a> (119 - 73.94)</td><td><a href="https://ridewithgps.com/routes/33705873">RWGPS</a></td></tr>
   </table>
 </body>
