--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <tr><td>3044</td><td><a href="https://rusa.org/rusa/perm/select?pid=3044">Snohomish - Anacortes - Snohomish</a> (204 - 126.76)</td><td><a href="https://ridewithgps.com/routes/33815794">RWGPS</a></td></tr>
     <tr><td>2525</td><td><a href="https://rusa.org/rusa/perm/select?pid=2525">The Commons-Renton-Maple Valley</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/34858942">RWGPS</a></td></tr>
     <tr><td>2173</td><td><a href="https://rusa.org/rusa/perm/select?pid=2173">Three Bumps-Woodinville</a> (101 - 62.76)</td><td><a href="https://ridewithgps.com/routes/33680078">RWGPS</a></td></tr>
+    <tr><td>2249</td><td><a href="https://rusa.org/rusa/perm/select?pid=2249">Rome to Blaine and Back</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/35575195">RWGPS</a></td></tr>
     <tr><td>3499</td><td><a href="https://rusa.org/rusa/perm/select?pid=3499">SOB - Snohomish Edison Out & Back</a> (203 - 126.14)</td><td><a href="https://ridewithgps.com/routes/33815633">RWGPS</a></td></tr>
     <tr><td>3056</td><td><a href="https://rusa.org/rusa/perm/select?pid=3056">Olympia Chehalis Western & Yelm Tenino Trails</a> (103 - 64)</td><td><a href="https://ridewithgps.com/routes/33989721">RWGPS</a></td></tr>
     <tr><td>1489</td><td><a href="https://rusa.org/rusa/perm/select?pid=1489">Snohomish - Mt. Vernon</a> (141 - 87.61)</td><td><a href="https://ridewithgps.com/routes/35004976">RWGPS</a></td></tr>
