--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <tr><td>3065</td><td><a href="https://rusa.org/rusa/perm/select?pid=3065">Green Gold and Red</a> (101 - 62.76)</td><td><a href="https://ridewithgps.com/routes/32959547">RWGPS</a></td></tr>
     <tr><td>4412</td><td><a href="https://rusa.org/rusa/perm/select?pid=4412">Redmond-Golden Gardens</a> (102 - 63.38)</td><td><a href="https://ridewithgps.com/routes/38912607">RWGPS</a></td></tr>
     <tr><td>1354</td><td><a href="https://rusa.org/rusa/perm/select?pid=1354">Centennial Trail Run</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/34356072">RWGPS</a></td></tr>
-    <tr><td>3788</td><td><a href="https://rusa.org/rusa/perm/select?pid=3788">Preston Trail Mix</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/35300556">RWGPS</a></td></tr>
     <tr><td>4653</td><td><a href="https://rusa.org/rusa/perm/select?pid=4653">Lake Sammamish Loop from Bryant</a> (103 - 64)</td><td><a href="https://ridewithgps.com/routes/42083103">RWGPS</a></td></tr>
     <tr><td>4334</td><td><a href="https://rusa.org/rusa/perm/select?pid=4334">Newport-Sumner</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/38382081">RWGPS</a></td></tr>
+    <tr><td>3788</td><td><a href="https://rusa.org/rusa/perm/select?pid=3788">Preston Trail Mix</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/35300556">RWGPS</a></td></tr>
     <tr><th>ID</th><th>Name</th><th>Route</th></tr>
     <tr><td>2525</td><td><a href="https://rusa.org/rusa/perm/select?pid=2525">The Commons-Renton-Maple Valley</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/34858942">RWGPS</a></td></tr>
     <tr><td>2173</td><td><a href="https://rusa.org/rusa/perm/select?pid=2173">Three Bumps-Woodinville</a> (101 - 62.76)</td><td><a href="https://ridewithgps.com/routes/33680078">RWGPS</a></td></tr>
@@ -31,6 +31,7 @@
     <tr><td>4106</td><td><a href="https://rusa.org/rusa/perm/select?pid=4106">Tulip Tangle</a> (201 - 124.9)</td><td><a href="https://ridewithgps.com/routes/35624420">RWGPS</a></td></tr>
     <tr><td>2249</td><td><a href="https://rusa.org/rusa/perm/select?pid=2249">Rome to Blaine and Back</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/35575195">RWGPS</a></td></tr>
     <tr><td>5281</td><td><a href="https://rusa.org/rusa/perm/select?pid=5281">Happy Trails 200k</a> (203 - 126.14)</td><td><a href="https://ridewithgps.com/routes/48965594">RWGPS</a></td></tr>
+    <tr><td>3592</td><td><a href="https://rusa.org/rusa/perm/select?pid=3592">Southern Cruise</a> (119 - 73.94)</td><td><a href="https://ridewithgps.com/routes/33705873">RWGPS</a></td></tr>
   </table>
 </body>
 </html>
