Update perm route list

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <tr><td>2249</td><td><a href="https://rusa.org/rusa/perm/select?pid=2249">Rome to Blaine and Back</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/35575195">RWGPS</a></td></tr>
     <tr><td>4106</td><td><a href="https://rusa.org/rusa/perm/select?pid=4106">Tulip Tangle</a> (201 - 124.9)</td><td><a href="https://ridewithgps.com/routes/35624420">RWGPS</a></td></tr>
     <tr><td>5281</td><td><a href="https://rusa.org/rusa/perm/select?pid=5281">Happy Trails 200k</a> (201 - 124.9)</td><td><a href="https://ridewithgps.com/routes/51863617">RWGPS</a></td></tr>
+    <tr><td>5300</td><td><a href="https://rusa.org/rusa/perm/select?pid=5300">Issaquah – Lake Sammamish – Mercer Island – May Valley Loops</a> (100 - 62.14)</td><td><a href="https://ridewithgps.com/routes/49026233">RWGPS</a></td></tr>
   </table>
 </body>
 </html>
